# cvcl

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
bench/: CMakeLists.txt  bench_blur.c  bench_flip.c
build_clang/: Makefile  cvclConfig.cmake
build_clang/Testing/Temporary/: CTestCostData.txt
build_clang/bench/: Makefile  bench_blur
build_clang/tests/: Makefile  test_correctness  test_edge_cases  test_filter  test_image  test_io  test_memory  test_morph  test_perf  test_transform
cmake/: cvclConfig.cmake.in  toolchain-arm-cortex-a.cmake  toolchain-arm-cortex-m4.cmake  toolchain-riscv32.cmake
examples/: CMakeLists.txt  demo_pipeline.c
examples/tutorial/: 01_hello_image.c  02_load_and_inspect.c  03_channels.c  04_blur.c  05_edges.c  06_morphology.c  07_threshold.c  08_custom_allocator.c  README.md  run_all.bat  run_all.sh
include/cvcl/: cvcl.h  cvcl_alloc.h  cvcl_cc.h  cvcl_draw.h  cvcl_error.h  cvcl_filter.h  cvcl_image.h  cvcl_integral.h  cvcl_io.h  cvcl_pixel.h  cvcl_platform.h  cvcl_transform.h  cvcl_types.h  cvcl_version.h
src/core/: alloc.c  connected_components.c  error.c  image.c  integral.c  pixel_hist.c  platform.c
src/draw/: draw.c
src/filter/: bilateral.c  blur.c  clahe.c  convolve.c  edge.c  harris.c  median.c  morph.c
src/io/: io_png_native.c  io_ppm.c  io_stb.c
src/transform/: pyramid.c  resize.c
tests/: CMakeLists.txt  test_correctness.c  test_edge_cases.c  test_filter.c  test_harness.h  test_image.c  test_io.c  test_memory.c  test_morph.c  test_numerical.c  test_perf.c  test_resource_constraints.c  test_transform.c  test_v2_features.c
